--- a/index.html
+++ b/index.html
@@ -9,88 +9,18 @@
 <body>
 
 <script>
-//ommentaire courtls
-//
-/*commentaire sur plusieurs lignes gggggggggggggggggggggggggggggggggggggggg */
 
+var age_limite = 18;
+var age_entre;
+age_entre = prompt("Quel est votre age ? : ");
 
-//var x = 1;//affectation d'une valeur numerique
-//var z = 5;
-//var y = "a";//affectation d'une chaine de caractère
-
-// alert(y);
-// alert(x+y);
-//alert(x + z);
-//var nom = prompt("Entrer votre nom");// pour entrer une saisie utilisateur
-//alert("Voici votre Nom :  "+nom); // Pour afficher sur l'ecran
-//document.write("Voici votre Nom :  "+nom);//ecrit directement sur une page web
-//console.log ("Entrer votre nom:  "+nom);//écrit sur la console
-//console.log(3*4);
-//console.log(10 + 2*(5+1));
-//console.log(1/3);
-//console.log("Le sinus de 10 est:  "+Math.sin(10));
- //console.log(Math.pow(100,100));
-//var nbr = Math.random()*100/(Math.random());
-//console.log(nbr);
-
-//calcul de la moyenne sur 3 valeures
-//var francais = Number(prompt("Note de français"));
-//var anglais = Number(prompt("Note de anglais"));
-//var math = Number(prompt("Note de math"));
-//var moyenne=("Votre moyenne est :  "+(francais+anglais+math)/3);
-//alert(moyenne);
-
-//calcul de l aire du triangle rectangle en a
-
-// alert("Triangle rectangle en A");
-// var ab = Number(prompt("longueur AB en cm"));
-// var ac = Number(prompt("longueur AC en cm"));
-// var aire=("l'aire du triangle rectangle en A est :  "+(ab*ac)/2) +" cm";
-// alert(aire);
-
-//calcul de l aire du triangle equilateral
-
-// alert("Triangle equilateral");
-// var ab = Number(prompt("longueur AB en cm"));
-// var h = Number(prompt("Hauteur en cm"));
-// var aire=("l'aire du triangle rectangle en A est :  "+(ab*(h/2)) +" cm");
-// alert(aire);
-
-//
-
-//Revision
-// var nom="Jean";
-// alert(nom);
-// document.write(nom)
-// console.log(nom);// pour débuger le programme
-
-// tableaux
-// var mon_tableaux = ['1'];
-// mon_tableaux[0]='1';// adresse commence par 0
-// mon_tableaux[1]=23;
-// mon_tableaux[2]='pierre';
-// mon_tableaux[3]='0';
-// mon_tableaux[4]='Ma 4eme cellule';
-// console.log("premiere case :  " + mon_tableaux[0]);
-// console.log("la 2ème case du tableau est :  " + mon_tableaux[1]);
-// console.log("la 3eme case du tableau est :  " + mon_tableaux[2]);
-// console.log("la 4eme case du tableau est :  " + mon_tableaux[3]);
-// console.log("la 5eme case du tableau est :  " + mon_tableaux[4]);
-
-// var monTab = [];
-// monTab[0]= prompt("Première donnée à stoquer : ");
-// monTab[1]= prompt("Première donnée à stoquer : ");
-// monTab[2]= prompt("Première donnée à stoquer : ");
-
-// console.log(monTab[0]);
-// console.log(monTab[1]);
-// console.log(monTab[2]);
-
-// var maTab = ["Isabelle","Jacques"];
-// console.log(maTab.length);// lenght : Affiche le nombre de case dans la variable
+// Test if et sinon
+if(age_entre <= age_limite){
+alert("Bienvenue");}
+else{
+alert("NON AUTORISE VOUS AVEC PLUS DE "+age_limite+" ANS !");}
 
 </script>
 
-<script src="bcj.js"></script>
 </body>
 </html>
