test avec while en js

--- a/index.html
+++ b/index.html
@@ -8,19 +8,8 @@
 </head>
 <body>
 
-<script>
 
-var age_limite = 18;
-var age_entre;
-age_entre = prompt("Quel est votre age ? : ");
 
-// Test if et sinon
-if(age_entre <= age_limite){
-alert("Bienvenue");}
-else{
-alert("NON AUTORISE VOUS AVEC PLUS DE "+age_limite+" ANS !");}
-
-</script>
-
+<script src="bcl.js"></script>
 </body>
 </html>
