--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Début javascript</title>
-    
+    <title>Document</title>
 </head>
 <body>
+    <script>
 
-
-
-<script src="bcl.js"></script>
+    let nombre = Number(prompt("Entrer un nombre"));
+    document.write(nombre >4000 ? 'Salut les impots':'Content');
+    </script>
+    
 </body>
 </html>
