Calculer la fractorielle d un nombre

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <script>
-
-    let nombre = Number(prompt("Entrer un nombre"));
-    document.write(nombre >4000 ? 'Salut les impots':'Content');
-    </script>
-    
+<body>   
+<script>
+let k=1;
+let n = prompt("veuillez entrer un nombre :  ");
+for( i=1;i<=n ;i++){
+    k=k*i;
+}
+document.write("La factoriel est : " + k );
+</script>
 </body>
 </html>
